// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PresentationCard HTML Structure > matches snapshot with all props 1`] = `
"<article class="card group">
        <a href="/presentations/test-presentation/">
          <img src="/test-image.jpg" alt="Full Test Presentation" width="1600" height="900" class="w-full rounded-t-xl object-cover" >
        </a>
        <div class="card-content">
          <div class="card-meta">
            <span class="inline-flex rounded-full bg-base-200 px-3 py-1 text-sm font-medium text-base-900 dark:bg-base-800 dark:text-base-100">
              45 minutes
            </span>
            <span class="inline-flex rounded-full bg-primary-100 px-3 py-1 text-sm font-medium text-primary-800 dark:bg-primary-900 dark:text-primary-200">
              Workshop
            </span>
          </div>

          <h2 class="card-title">
            <a href="/presentations/test-presentation/" class="hover:text-primary-500 dark:hover:text-primary-400">
              Full Test Presentation
            </a>
          </h2>

          <p class="text-base-500 dark:text-base-400">
            <span class="font-medium">For:</span> Developers
          </p>

          <div class="mt-6">
            <a href="/presentations/test-presentation/" class="inline-flex items-center gap-2">
              View Presentation
              <svg xmlns="http://www.w3.org/2000/svg" class="size-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                <path d="M5 12h14M12 5l7 7-7 7"></path>
              </svg>
            </a>
          </div>
        </div>
      </article>"
`;

exports[`PresentationCard HTML Structure > matches snapshot with minimal props 1`] = `
"<article class="card group">
        <a href="/presentations/test-presentation/">
          <h2 class="card-title">
            <a href="/presentations/test-presentation/" class="hover:text-primary-500 dark:hover:text-primary-400">
              Test Presentation
            </a>
          </h2>
        </a>
        <div class="mt-6">
          <a href="/presentations/test-presentation/" class="inline-flex items-center gap-2">
            View Presentation
            <svg xmlns="http://www.w3.org/2000/svg" class="size-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
              <path d="M5 12h14M12 5l7 7-7 7"></path>
            </svg>
          </a>
        </div>
      </article>"
`;
